updated new theme #2

--- a/Gumi.theme.css
+++ b/Gumi.theme.css
@@ -192,6 +192,11 @@
     box-shadow: none;
     border: 4px solid #8EA54B;
 }
+.theme-dark .item-2J1YMK:active, 
+.theme-dark .item-2J1YMK:hover {
+    background-color: rgba(0,0,0,0.23);
+    color: #fff;
+}
 .noticeInfo-3_iTE1 {
     background-color: #8EA54B;
     color: #fff;
