--- a/Fanta.theme.css
+++ b/Fanta.theme.css
@@ -191,6 +191,11 @@
     box-shadow: none;
     border: 4px solid #F99500;
 }
+.theme-dark .item-2J1YMK:active, 
+.theme-dark .item-2J1YMK:hover {
+    background-color: rgba(0,0,0,0.23);
+    color: #fff;
+}
 .noticeInfo-3_iTE1 {
     background-color: #F99500;
     color: #fff;
