updated once again

--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1719,7 +1719,7 @@ a {
     border-radius: 0; 
     box-shadow: inset 0 0 0 3px #91223A;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
