--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -1699,7 +1699,7 @@ a {
     border-radius: 0; 
     box-shadow: inset 0 0 0 3px #49943D;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
