--- a/Bubble.theme.css
+++ b/Bubble.theme.css
@@ -1955,7 +1955,7 @@ a {
      box-shadow: inset 5px 13px 6px rgba(255,255,255,0.4), inset 0px 0px 46px rgba(255,255,255,0.5);
      border-radius: 50px;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
