--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -526,7 +526,7 @@ a,
     border-radius: 0; 
     box-shadow: inset 0 0 0 3px #593B3A;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
