--- a/Mario.theme.css
+++ b/Mario.theme.css
@@ -1698,7 +1698,7 @@ a {
     border-radius: 0; 
     box-shadow: inset 0 0 0 3px #D50201;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
