--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -1700,7 +1700,7 @@ a {
     border-radius: 0; 
     box-shadow: inset 0 0 0 3px #C8102E;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
