--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1701,7 +1701,7 @@ a {
     border-radius: 0; 
     box-shadow: inset 0 0 0 3px #1559B7;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
