--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -1100,6 +1100,10 @@ a,
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 .react-datepicker__day.react-datepicker__day--mon,
 .react-datepicker__day.react-datepicker__day--tue,
 .react-datepicker__day.react-datepicker__day--wed,
