--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -2184,6 +2184,10 @@ a {
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 /* New Invite Stuff */
 .wrapper-VSYYTS {
     background: transparent;
