--- a/TouhouKnowledge.theme.css
+++ b/TouhouKnowledge.theme.css
@@ -41,6 +41,10 @@
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 /* Main Chat Section */
 .avatar-17mtNa .large-3ChYtB {
     opacity: 1 !important;
