--- a/Gumi.theme.css
+++ b/Gumi.theme.css
@@ -568,6 +568,10 @@
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 .spinner-wandering-cubes-1eyF3t,
 .wanderingCubesItem-WPXqao,
 .spinner-wandering-cubes .spinner-item {
