--- a/KemonoFriends.theme.css
+++ b/KemonoFriends.theme.css
@@ -563,6 +563,10 @@
 .mediaBarProgress-1xaPtl:before {
     background-color: #174C3E !important;
 }
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 .video-1FfuMD,
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
