--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -12,11 +12,11 @@
 .theme-dark .guild-1EfMGQ.unread-qLkInr:before {
     border-radius: 0px;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: black;
     border: 1px solid rgba(173, 173, 173,0.3);
 }
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: silver;
 }
 .theme-dark .container-3cGP6G {
@@ -1391,7 +1391,7 @@ a,
 box-shadow: none;
     color: silver;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     border-radius: 0px;
 }
 .theme-dark .guildsAdd-21_IdK {
