--- a/Bubble.theme.css
+++ b/Bubble.theme.css
@@ -150,7 +150,7 @@
     margin-left: -22px;
     width: 26px;
 }
-.unreadBar-17qm9c {
+.unreadBar-3YD_k9 {
     display: none;
 }
 .colorConnectedText-1c_uzY, 
@@ -238,11 +238,11 @@
 .iconUnread-2eGkvX {
     display: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background-color: rgba(206, 233, 234,0.4); 
     color: black;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     background: transparent;
     border: 2px solid #E7FEFF;
     color: black!important;
@@ -325,7 +325,7 @@
     background-color: #E7FEFF;
 }
 
-.theme-dark .theme-dark .operations-36ENbA,
+.theme-dark .message-group .edit-message .edit-operation,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -602,11 +602,11 @@ a {
     height: auto;
     width: auto;
 }
-.theme-dark .reaction .reaction-count,
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8Count-2ddRoS,
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(231, 254, 255,.5) /* (Main Color, .5) */;
 }
 .wrapper-2NJDcI {
