--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -351,11 +351,11 @@ a,
     background-color: #84003B;
 }
 /* Reactions */
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background-color: #4F1C4F;
     border: 1px solid black;
 }
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
 /* Small Popout Box */
@@ -391,10 +391,10 @@ a,
     margin-left: -5px;
     margin-right: 6px;
 }
-.theme-dark .theme-dark .operations-36ENbA {
+.theme-dark .message-group .edit-message .edit-operation {
     color: rgb(255, 255, 255);
 }
-.theme-dark .operations-36ENbA>a {
+.message-group .edit-message .edit-operation>a {
     color: #840058;
 }
 /* Bot Tag */
@@ -1362,11 +1362,11 @@ a,
     background-size: 36px 36px;
 }
 /* Guild Error and Add */
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     border-radius: 50px;
     background-color: rgba(79, 28, 79,0.4);
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     border-radius: 50px;
     background-color: rgba(132, 0, 88,0.4);
 }
