--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -666,6 +666,10 @@ a {
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 .avatar-17mtNa .large-3ChYtB:hover, 
 .avatar-3EQepX:hover, 
 .iconSizeLarge-161qtT:hover,
@@ -842,10 +846,10 @@ a {
     border-radius: 0px;
     color: black;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background: rgba(209, 170, 76,0.4);
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     border: none;
     color: black;
     border-radius: 0px;
@@ -916,10 +920,10 @@ a {
     background-color: black !important;
     color: white;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: #d1aa4c;
 }
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: black;
 }
 .wrapper-232cHJ,
