--- a/TouhouKnowledge.theme.css
+++ b/TouhouKnowledge.theme.css
@@ -65,10 +65,10 @@
     background: black;
     border: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background: black;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     border-color: #A87E56;
     color: white;
     border-width: 1px;
@@ -208,10 +208,10 @@
     margin-right:0px;
     z-index:1
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(112, 84, 53,.3);
 }
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
 .avatarSpeaking-1wJCNq {
@@ -509,10 +509,10 @@ a,
 .theme-dark .markup-2BOw-j code.inline {
     background: rgba(0,0,0,0.3);
 }
-.theme-dark .operations-36ENbA>a {
+.message-group .edit-message .edit-operation>a {
     color: #EFD9C3;
 }
-.theme-dark .theme-dark .operations-36ENbA,
+.theme-dark .message-group .edit-message .edit-operation,
 .theme-dark .edited-DL9ECl {
     color: white;
 }
