--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -155,11 +155,11 @@
     border-radius: 0px;
     background-color: #7752ba;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background-color: #7b5eb2;
     border: 1px solid black;
 }
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
 .theme-dark .container-3cGP6G {
@@ -199,7 +199,10 @@
 .theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
-
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
+    background-color: transparent;
+    border-color: transparent;
+}
 .theme-dark .markup-2BOw-j .mention,
 .theme-dark .isMentioned-N-h9aa .mention, .theme-dark .wrapper-3WhCwL{
     background-color: black !important;
@@ -1423,7 +1426,7 @@ a,
     box-shadow: none;
     color: silver;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     border-radius: 50px;
 }
 .theme-dark .guildsAdd-21_IdK {
