--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -128,7 +128,7 @@
     margin-left: -22px;
     width: 26px;
 }
-.unreadBar-17qm9c {
+.unreadBar-3YD_k9 {
     display: none;
 }
 .colorConnectedText-1c_uzY, 
@@ -213,10 +213,10 @@
 .iconUnread-2eGkvX {
     display: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background-color: rgba(21, 89, 183,0.4); 
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     background: transparent;
     border: 2px solid #1559B7;
     color: #fff!important;
@@ -286,7 +286,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .theme-dark .operations-36ENbA,
+.theme-dark .message-group .edit-message .edit-operation,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -503,11 +503,11 @@ a {
     background-color: rgba(42, 112, 206, 0.8); /* (Hover Color, .8) */
     color: #fff;
 }
-.theme-dark .reaction .reaction-count,
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8Count-2ddRoS,
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(21, 89, 183,.5) /* (Main Color, .5) */;
 }
 .wrapper-2NJDcI {
@@ -1694,11 +1694,11 @@ a {
 .callAvatarStatus-3y6S04 {
     border-color: black;
     background-color: #1559B7;
-    border-radius: 0; 
+    border-radius: 1; 
 }
 .callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI,
 .callAvatarBorder-1D_KaE.video-3GgX2M.speaking-oCqYMI {
-    border-radius: 0; 
+    border-radius: 1; 
     box-shadow: inset 0 0 0 3px #1559B7;
 }
 .theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
