--- a/Fanta.theme.css
+++ b/Fanta.theme.css
@@ -191,11 +191,6 @@
     box-shadow: none;
     border: 4px solid #F99500;
 }
-.theme-dark .item-2J1YMK:active, 
-.theme-dark .item-2J1YMK:hover {
-    background-color: rgba(0,0,0,0.23);
-    color: #fff;
-}
 .noticeInfo-3_iTE1 {
     background-color: #F99500;
     color: #fff;
@@ -257,10 +252,10 @@
     position: relative;
      left: -13px;
 }
-.unreadBar-17qm9c {
+.unreadBar-3YD_k9 {
     display: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds .guild .badge {
+.badge-1GsMF2 {
     bottom: 26px;
     right: -7px;
     padding: 7px 10px;
@@ -377,10 +372,10 @@
     overflow: visible;
     transition: margin-left .2s, background-color .2s;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background-color: #F99500;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     background: rgba(0,0,0,0.2);
     border: 2px solid #F99500;
     border-radius: 50%;
@@ -605,7 +600,7 @@
     background-color: rgba(255,0,0,1) !important;
     color: #fff !important;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
@@ -623,7 +618,7 @@
 /* ----- */
 .theme-dark .timestampCozy-2hLAPV,
 .theme-dark .topic-2QX7LI,
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
 .theme-dark .markup-2BOw-j {
@@ -728,7 +723,7 @@ a,
 .theme-dark .item-2J1YMK {
     color: white !important;
 }
-.theme-dark .reaction {
+.theme-dark .reaction-1ELvT8 {
     background: rgba(255, 255, 255, 0.08);
     border-radius: 0;
     border: 1px outset rgba(255, 255, 255, 0.18);
@@ -737,7 +732,7 @@ a,
     right: -19px;
     position: relative;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(249, 149, 0,.5);
     border: 1px outset rgba(249, 149, 0, 0.58);
 }
@@ -2093,7 +2088,7 @@ a,
     border-radius: 50px; 
     box-shadow: inset 0 0 0 3px #F99500;
 }
-.theme-dark .private-channel-call.minimum .private-channel-call-actions .center {
+.theme-dark .private-channel-call.minimum .private-channel-call-actions .center, .theme-dark .wrapper-29NfPK {
     background-color: transparent;
     border-color: transparent;
 }
