--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -132,7 +132,7 @@
     margin-left: -22px;
     width: 26px;
 }
-.unreadBar-17qm9c {
+.unreadBar-3YD_k9 {
     display: none;
 }
 .colorConnectedText-1c_uzY, 
@@ -217,10 +217,10 @@
 .iconUnread-2eGkvX {
     display: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background-color: rgba(200, 16, 46,0.4); 
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     background: transparent;
     border: 2px solid #C8102E;
     color: #fff!important;
@@ -290,7 +290,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .theme-dark .operations-36ENbA,
+.theme-dark .message-group .edit-message .edit-operation,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -504,11 +504,11 @@ a {
     background-color: rgba(231, 19, 53, 0.8); /* (Hover Color, .8) */
     color: #fff;
 }
-.theme-dark .reaction .reaction-count,
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8Count-2ddRoS,
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(200, 16, 46,.5) /* (Main Color, .5) */;
 }
 .wrapper-2NJDcI {
