--- a/Thunderstorm.theme.css
+++ b/Thunderstorm.theme.css
@@ -205,14 +205,14 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .theme-dark .operations-36ENbA,
+.theme-dark .message-group .edit-message .edit-operation,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
 .theme-dark .iconForeground-1w5n7R {
     fill: white;
 }
-.theme-dark .operations-36ENbA>a {
+.message-group .edit-message .edit-operation>a {
     color:  #272729;
 }
 .small-5Os1Bb .statusTyping-2ed9jJ {
@@ -294,24 +294,24 @@
 a {
     color: silver !important;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     background: rgba(0,0,0,0.4);
     border: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background: rgba(0,0,0,1);
 }
-.theme-dark .reaction {
+.theme-dark .reaction-1ELvT8 {
     background: rgba(255, 255, 255, 0.14);
 }
-.theme-dark .reaction .reaction-count {
+.theme-dark .reaction-1ELvT8Count-2ddRoS {
     color: rgba(255, 255, 255, 0.5);
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(39, 39, 41,.3);
     border: 1px solid rgba(255,255,255,0.34);
 }
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
 .botTagRegular-2HEhHi {
