--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -128,7 +128,7 @@
     margin-left: -22px;
     width: 26px;
 }
-.unreadBar-17qm9c {
+.unreadBar-3YD_k9 {
     display: none;
 }
 .colorConnectedText-1c_uzY, 
@@ -213,10 +213,10 @@
 .iconUnread-2eGkvX {
     display: none;
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
+.theme-dark .guildsError-3cFMtY:hover {
     background-color: rgba(82, 167, 50,0.4); 
 }
-.theme-dark .guildsWrapper-5TJh6A .guilds-error {
+.theme-dark .guildsError-3cFMtY {
     background: transparent;
     border: 2px solid #52A732;
     color: #fff!important;
@@ -286,7 +286,7 @@
 .theme-dark .descriptionDiscriminator-3vUOCc,
 .theme-dark .description-11DmNu, 
 .theme-dark .descriptionUsername-J_75O8,
-.theme-dark .theme-dark .operations-36ENbA,
+.theme-dark .message-group .edit-message .edit-operation,
 .theme-dark .edited-DL9ECl{
     color: white;
 }
@@ -503,11 +503,11 @@ a {
 .theme-dark .headerCozyMeta-rdohGq {
     text-shadow: 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black;
 }
-.theme-dark .reaction .reaction-count,
-.theme-dark .reaction.reaction-me .reaction-count {
+.theme-dark .reaction-1ELvT8Count-2ddRoS,
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf .reactionCount-2ddRoS {
     color: white;
 }
-.theme-dark .reaction.reaction-me {
+.theme-dark .reaction-1ELvT8.reactionMe-23mbRf {
     background: rgba(82, 167, 50,.5) /* (Main Color, .5) */;
 }
 .wrapper-2NJDcI {
@@ -1694,7 +1694,7 @@ a {
 .callAvatarStatus-3y6S04 {
     border-color: black;
     background-color: #52A732;
-    border-radius: 0; 
+    border-radius: 1; 
 }
 .callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI,
 .callAvatarBorder-1D_KaE.video-3GgX2M.speaking-oCqYMI {
