--- a/Theme_Group_2/Chocola.theme.css
+++ b/Theme_Group_2/Chocola.theme.css
@@ -1971,3 +1971,7 @@ opacity: 1;
 .theme-dark .sectionLine-JjseS9 {
     background-color: transparent;
 }
+.reaction-1ELvT8 {
+    left: 23px;
+    position: relative;
+}
