--- a/Theme_Group_5/KemonoFriends.theme.css
+++ b/Theme_Group_5/KemonoFriends.theme.css
@@ -1674,7 +1674,8 @@ a,
     margin-left: 196px;
     width: 164px;
 }
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.webcode-22GGLX {
+.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.webcode-22GGLX,
+.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr {
     height: 164px;
     position: relative;
     left: 144px;
@@ -2126,4 +2127,11 @@ a,
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, 
 .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+.reaction-1ELvT8 {
+    left: 23px;
+    position: relative;
+}
+.reactions-1xb2Ex .reactionBtn-2na4rd {
+    margin-left: 23px;
 }
