--- a/Theme_Group_1/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_1/BokuNoHeroAcademia.theme.css
@@ -39,15 +39,17 @@
 .avatarSpeaking-1wJCNq {
     box-shadow: 0 0 0 2px #CE693B, inset 0 0 0 1.5px transparent;
 }
-    .container-2Thooq,
-  .theme-dark .inner-zqa7da,
-  .contentSelectedText-3wUhMi,
-  .theme-dark .member-3W1lQa.popout-open .content-OzHfo4, 
-  .theme-dark .member-3W1lQa.popout-open:hover .content-OzHfo4 {
-    background: rgba(102, 139, 153,.5);
-    border: 2px outset rgba(255,255,255,0.4); 
+  .theme-dark .container-2Thooq,
+  .theme-dark .inner-zqa7da {
+    background: rgba(102, 139, 153,.7);
     font-weight: normal;
     border-radius: 0px;
+}
+ .contentSelectedText-3wUhMi {
+    background: rgba(102, 139, 153,.7);
+    font-weight: normal;
+    border-radius: 0px;
+    box-shadow: inset 0 0 6px .2pc;
 }
 .container-2Thooq .avatar-3JE4B3 {
     padding: 6px;
@@ -63,7 +65,7 @@
     right: -8px;
     width: 17px;
     height: 17px;
-    border-radius: 50%;
+    border-radius: 0%;
 }
  .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, 
  .theme-dark .messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-track-piece {
@@ -94,12 +96,19 @@
 }
 .contentHoveredText-2D9B-x, 
 .contentHoveredVoice-3p_NEO:active, 
-.contentSelectedVoice-1WDIBM:active,
-.theme-dark .member-3W1lQa:hover .content-OzHfo4 {
+.contentSelectedVoice-1WDIBM:active {
     background: rgba(239, 219, 207,.5);
-    border: 2px outset rgba(255,255,255,0.4); 
     font-weight: normal;
     border-radius: 0px;
+    border: 1px solid rgba(255,255,255,0.45);
+}
+.theme-dark .member-3W1lQa:hover .content-OzHfo4 {
+    background: rgba(239, 219, 207,.5);
+    font-weight: normal;
+    border-radius: 0px;
+}
+.theme-dark .member-3W1lQa.popout-open .content-OzHfo4, .theme-dark .member-3W1lQa.popout-open:hover .content-OzHfo4 {
+    background-color: rgba(239, 219, 207,.7);
 }
 .iconHovered-2L3-fB, 
 .iconHoveredCollapsed-3caIIZ, 
@@ -110,6 +119,9 @@
     color: #EFDBCF;
     opacity: 1;
 }
+.foreground-2W-aJk {
+    opacity: 1;
+}
 .nameMutedText-3Vj4bM, 
 .nameMutedVoice-3oxyQZ,
 .colorMutedText-36M8WR, 
@@ -118,13 +130,7 @@
 .nameLockedVoice-26MhB1,
 .colorLockedText-1VRkPt, 
 .colorLockedVoice-2UlBjl {
-    color: white;
-    opacity: 1;
-    text-shadow: 0 0 6px red, 0 0 6px red, 0 0 6px red, 0 0 6px red;
-}
-.colorUnreadText-2t7XRb, 
-.colorUnreadVoice-137o4S {
-    color: white;
+    color: #ef3836;
     opacity: 1;
 }
 .nameDefaultText-24KCy5, 
@@ -144,11 +150,6 @@
 .colorUnreadVoice-137o4S {
    color: #FF0000;
    opacity: 1;
-}
-.contentUnreadText-2vNnZc, 
-.contentUnreadVoice-1dijOt {
-     background: rgba(255,0,0,0.16);
-     border: 1px solid rgba(255,0,0,0.26);
 }
 .unread-1Dp-OI {
     display: none;
@@ -293,6 +294,9 @@
 .content-8biNdB a,
 a {
     color: #EFDBCF !important;
+}
+.theme-dark .embedTitleLink-1Zla9e {
+    color: #EFDBCF!important;
 }
 
 .theme-dark .guildsError-3cFMtY {
@@ -687,11 +691,11 @@ a {
 }
  /* Search, Pins, Mentions, , Calendar, Search Results*/
  /* Need Help Menu */
- .need-help-modal.deprecated .header {
+ .need-help-modal.form.deprecated .header {
     background-color: #668B99;
     border-radius: 0px;
 }
-.need-help-modal.deprecated .header input[type=text] {
+.need-help-modal.form.deprecated .header input[type=text] {
     background-color: black;
     border-radius: 0px;
     box-shadow: none;
@@ -701,7 +705,7 @@ a {
 .need-help-modal.deprecated .form-inner.loading {
     background-color:  #668B99;
 }
-.need-help-modal.deprecated .footer {
+.need-help-modal.form.deprecated .footer {
     background-color:  #668B99;
     border-radius: 0px;
     border-top: none;
@@ -710,7 +714,7 @@ a {
 .need-help-modal.deprecated a {
     color: #EFDBCF !important;
 }
-.need-help-modal.deprecated .header input[type=text]:focus {
+.need-help-modal.form.deprecated .header input[type=text]:focus {
     border-bottom: none;
 }
   /* Need Help Menu */
@@ -1101,7 +1105,7 @@ a {
      color: white !important;
 }
 
-#bd-settings-sidebar .ui-tab-bar-header,
+.theme-dark #bd-settings-sidebar .ui-tab-bar-header,
 .theme-dark .header-2RyJ0Y {
     color: #668B99;
     text-transform: capitalize;
@@ -1214,9 +1218,16 @@ a {
     border-radius: 0;
 }
 .ace-monokai,
-.ace-monokai .ace_gutter {
+.ace-monokai .ace_gutter,
+.editor {
     background-color: black;
     color: white;
+}
+.theme-dark .add-game-popout {
+    background-color: #668B99;
+}
+.ui-standard-sidebar-view #editor-detached button {
+    background: #668B99;
 }
 .ace-monokai .ace_gutter-active-line,
 .ace-monokai .ace_marker-layer .ace_active-line,
@@ -1226,7 +1237,7 @@ a {
 .ace-monokai .ace_comment {
     color: white !important;
 }
-.bda-slist li {
+.theme-dark .bda-slist li {
     background: rgba(102, 139, 153,.6);
     border: transparent;
 }
@@ -1285,7 +1296,7 @@ a {
 }
 .theme-dark .quickMessage-1yeL4E {
    background-color: rgba(0,0,0,0.34);
-    border-color: transaprent;
+    border-color: transparent;
     color: white;
 }
 .theme-dark .quickMessage-1yeL4E:focus {
@@ -1315,6 +1326,19 @@ a {
 .theme-dark .connectedAccount-36nQx7 {
     border-radius: 0px;
     background-color: #668B99;
+}
+.connectedAccountName-f8AEe2 {
+    color: white;
+    text-shadow: 1px 0 .32pc black, 1px 0 .32pc black, 1px 0 .32pc black;
+}
+.connectedAccountName-f8AEe2, .connectedAccountNameInner-1phBvE {
+    overflow: visible;
+}
+.lookFilled-1Gx00P.colorBrand-3pXr91:disabled {
+    background-color: #668B99;
+}
+.search-bar-tag {
+    background: #668B99;
 }
 /* Header Playing */
 .headerPlaying-j0WQBV,
@@ -1573,4 +1597,19 @@ a {
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+.theme-dark .paymentRow-2e7VM6 {
+    border-bottom: none;
+}
+.theme-dark .paginator-166-09 {
+    background: transparent;
+}
+.theme-dark .paginator-2CA79G,
+.theme-dark .summaryInfo-2QFKUg {
+    color: white;
+}
+.theme-dark .payment-xT17Mq,
+.theme-dark .paymentPane-3bwJ6A {
+    background-color: transparent;
+    color: white;
 }
