--- a/Theme_Group_1/Danganronpa.theme.css
+++ b/Theme_Group_1/Danganronpa.theme.css
@@ -417,6 +417,10 @@ a {
     height: 54px;
     background-size: cover;
 }
+.messageGroupCozy-2iY6cT .avatar-17mtNa .large-3ChYtB {
+    margin-left: -4px;
+    margin-top: -4px;
+}
 .theme-dark .markup-2BOw-j pre {
     background: transparent;
     border: none;
@@ -1050,6 +1054,9 @@ a {
 .private-channels .channel:hover a {
     background-color: rgba(142, 194, 194,.6);
 }
+.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+    background-color: rgba(142, 194, 194,.8);
+}
 /* Friends and DMs */
 /* Discord Settings */
 .theme-dark .questionMark-CWEQZn {
@@ -1594,6 +1601,9 @@ a {
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+.theme-dark .hoverablePayment-Yc6mK7:hover {
+    background-color: rgba(0,0,0,0.23);
 }
 .theme-dark .paymentRow-2e7VM6 {
     border-bottom: none;
