--- a/Theme_Group_1/Thunderstorm.theme.css
+++ b/Theme_Group_1/Thunderstorm.theme.css
@@ -419,6 +419,10 @@ a {
     height: 54px;
     background-size: cover;
 }
+.messageGroupCozy-2iY6cT .avatar-17mtNa .large-3ChYtB {
+    margin-left: -4px;
+    margin-top: -4px;
+}
 .theme-dark .markup-2BOw-j pre {
     background: transparent;
     border: none;
@@ -1045,6 +1049,9 @@ a {
     background-color: rgba(0, 0, 0,.4);
     border: 1px solid rgba(255,255,255,0.24);
 }
+.privateChannels-1nO12o .channel-2fhmY8:hover .selectedLink-3dsNZ6 {
+    background-color: rgba(0, 0, 0,.7);
+}
 /* Friends and DMs */
 /* Discord Settings */
 .theme-dark .questionMark-CWEQZn {
@@ -1589,6 +1596,9 @@ a {
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+.theme-dark .hoverablePayment-Yc6mK7:hover {
+    background-color: rgba(0,0,0,0.23);
 }
 .theme-dark .paymentRow-2e7VM6 {
     border-bottom: none;
